--- a/html/singleton.html
+++ b/html/singleton.html
@@ -420,7 +420,7 @@ modules in the game can benefit from being able to log diagnostic
 information. However, passing an instance of our <code>Log</code> class to every
 single function clutters the method signature and distracts from the
 intent of the code.</p>
-<p>The obvious fix is to make our Log class a singleton. Every function
+<p>The obvious fix is to make our <code>Log</code> class a singleton. Every function
 can then go straight to the class itself to get an instance. But when
 we do that, we inadvertently acquire a strange little restriction. All
 of the sudden, we can no longer create more than one logger.</p>
@@ -439,7 +439,7 @@ limitation is entrenched in every single call site that uses it:</p>
 </pre></div>
 
 
-<p>In order to make our Log class support multiple instantiation (like it
+<p>In order to make our <code>Log</code> class support multiple instantiation (like it
 originally did), we&#8217;ll have to fix both the class itself and every
 single call site that uses it. Our convenient access isn&#8217;t so
 convenient anymore.</p>
@@ -606,13 +606,18 @@ are some alternative solutions to consider.</p>
 <p>This is one half of what the Singleton pattern gives you. As in our
 file system example, it can be critical to ensure there&#8217;s only a
 single instance of a class.</p>
-<p>However, that doesn&#8217;t necessarily mean we also want to provide public
-global access to that instance. We may want to restrict access to
-certain areas of the code, or even make it entirely private to a
-single class (For example, we may be wrapping our file system wrapper
-inside another wrapper entirely.) In those cases, providing a public
+<p>However, that doesn&#8217;t necessarily mean we also want to provide <em>public</em>,
+<em>global</em> access to that instance. We may want to restrict access to
+certain areas of the code, or even make it <span name="wrapper">private</span> to a
+single class. In those cases, providing a public
 global point of access weakens the architecture.</p>
-<p>So we need a way to ensure single instantiation without providing
+<aside name="wrapper">
+
+<p>For example, we may be wrapping our file system wrapper
+inside <em>another</em> layer of abstraction.</p>
+</aside>
+
+<p>We want a way to ensure single instantiation <em>without</em> providing
 global access. There are a couple of ways to accomplish this. Here&#8217;s
 one:</p>
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">FileSystem</span>
@@ -645,8 +650,7 @@ multiple instantiation is only done at <em>runtime</em>. The Singleton
 pattern, in contrast, guarantees a single instance at compile time, by
 the very nature of the class&#8217;s structure.</p>
 <h3><a href="#to-provide-convenient-access-to-an-instance" name="to-provide-convenient-access-to-an-instance">To provide convenient access to an instance</a></h3>
-<p>Convenient access is the main reason we reach for singletons &#8212;
-they make it easy to get our hands on an object we need to use in a
+<p>Convenient access is the main reason we reach for singletons. They make it easy to get our hands on an object we need to use in a
 lot of different places. That ease comes at a cost, though: it becomes
 equally easy to get our hands on the object in places where we <em>don&#8217;t</em>
 want it being used.</p>
@@ -655,7 +659,7 @@ possible while still getting the job done. The smaller the scope an
 object has, the fewer places we need to keep in our head while we&#8217;re
 working with it. Before we take the shotgun approach of a singleton
 object with <em>global</em> scope, let&#8217;s consider other ways our codebase can
-get access to an object.</p>
+get access to an object:</p>
 <ul>
 <li>
 <p><strong>Pass it in.</strong> The simplest solution, and often the best, is to simply pass the
@@ -711,7 +715,7 @@ methods provided to them is covered in the <a class="pattern"
 href="subclass-sandbox.html">Subclass Sandbox</a> chapter.</p>
 <aside name="gameobject">
 
-<p>This raises the question, &#8220;how does <code>GameObject</code> get the log
+<p>This raises the question, &#8220;how does <code>GameObject</code> get the <code>Log</code>
 instance?&#8221; A simple solution is to have the base class simply create
 and own a static instance. If you don&#8217;t want the base class to take
 such an active role, another popular solution is to use dependency
