--- a/html/bytecode.html
+++ b/html/bytecode.html
@@ -793,7 +793,7 @@ Those languages leave it to the <em>user</em> to make sure they don&#8217;t writ
 <p><em>It&#8217;s object-oriented.</em> If you adhere to OOP principles, this does things the &#8220;right&#8221; way and uses polymorphic dispatch for type-specific behavior instead of something like switching on a type tag.</p>
 </li>
 <li>
-<p><em>It&#8217;s verbose.</em> You have to define a separate class with all of the associated ceremonial verbiage for each data type. Note that in the above examples, we showed the entire definition of <em>all</em> of the value types. Here we only covered one!</p>
+<p><em>It&#8217;s verbose.</em> You have to define a separate class with all of the associated ceremonial verbiage for each data type. Note that in the previous examples, we showed the entire definition of <em>all</em> of the value types. Here we only covered one!</p>
 </li>
 <li>
 <p><em>It&#8217;s inefficient.</em> To get polymorphism, you have to go through a pointer, which means even tiny values like booleans and numbers get wrapped in objects that are allocated on the heap. Every time you touch a value, you have to do a virtual method call.</p>
