--- a/html/dirty-flag.html
+++ b/html/dirty-flag.html
@@ -419,13 +419,13 @@ sync point may not be part of the game mechanics. We may just want to hide the
 work behind a loading screen or a cut scene.</p>
 <ul>
 <li>
-<p><em>Doing the work doesn&#8217;t impact the user experience.</em> Unlike the above
+<p><em>Doing the work doesn&#8217;t impact the user experience.</em> Unlike the previous
   option, you can often give something to
     distract the player while the game is busy processing.</p>
 </li>
 <li>
 <p><em>You lose control over when the work happens.</em> This is sort of the
-    opposite of the above point. You have micro-scale control over when you
+    opposite of the earlier point. You have micro-scale control over when you
     process, and can make sure the game handles it gracefully.</p>
 <p>What you <em>can&#8217;t</em> do is ensure the player actually makes it to the
 checkpoint or meets whatever criteria you&#8217;ve defined. If they get lost
