--- a/html/prototype.html
+++ b/html/prototype.html
@@ -391,7 +391,7 @@
 <p>Behavior goes through a level of indirection&thinsp;&mdash;&thinsp;delegating to the prototype&thinsp;&mdash;&thinsp;and is stored on a separate object that represents the set of methods shared by all objects of a certain type.</p>
 </li>
 </ul>
-<p>Call me crazy, but that sounds a lot like my description of classes above. You <em>can</em> write prototype-style code in JavaScript (<em>sans</em> cloning), but the syntax and idioms of the language encourage a class-based approach.</p>
+<p>Call me crazy, but that sounds a lot like my description of classes earlier. You <em>can</em> write prototype-style code in JavaScript (<em>sans</em> cloning), but the syntax and idioms of the language encourage a class-based approach.</p>
 <p>Personally, I think that&#8217;s a <span name="good">good thing</span>. Like I said, I find doubling down on prototypes makes code harder to work with, so I like that JavaScript wraps the core semantics in something a little more classy.</p>
 <h2><a href="#prototypes-for-data-modeling" name="prototypes-for-data-modeling">Prototypes for Data Modeling</a></h2>
 <p>OK, I keep talking about things I <em>don&#8217;t</em> like prototypes for, which is making this chapter a real downer. I think of this book as more comedy than tragedy, so let&#8217;s close this out with an area where I <em>do</em> think prototypes, or more specifically <em>delegation</em>, can be useful.</p>
