--- a/html/type-object.html
+++ b/html/type-object.html
@@ -641,7 +641,7 @@ file that defines them. It could look like:</p>
 
 <p>We&#8217;d have a chunk of code that reads each breed entry and instantiates
 a new Breed instance with its data. As you can see from the <code>"parent": "Troll"</code>
-fields above, the Troll Archer and Troll Wizard breeds inherit from the base
+fields, the Troll Archer and Troll Wizard breeds inherit from the base
 Troll breed.</p>
 <p>Since both of them have zero for their health, they&#8217;ll inherit it from
 the base Troll breed instead. This means now our designer can tune the
