--- a/html/subclass-sandbox.html
+++ b/html/subclass-sandbox.html
@@ -615,7 +615,7 @@ the initialization stages.</p>
 </li>
 <li>
 <p><strong>Make the state static.</strong></p>
-<p>In the above example, we were initializing each <code>Superpower</code> <em>instance</em> with
+<p>In the previous example, we were initializing each <code>Superpower</code> <em>instance</em> with
 a particle system. That makes sense when every power needs its own unique
 state. But let&#8217;s say that the particle system is a
 <a class="pattern" href="singleton.html">Singleton</a>, and every power
